// Copyright 2019  The Cockroach Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied. See the License for the specific language governing
// permissions and limitations under the License.

syntax = "proto3";
package znbase.storage.enginepb;
option go_package = "enginepb";

import "gogoproto/gogo.proto";

// EngineType specifies type of storage engine (eg. rocksdb, pebble).
enum EngineType {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = false;

  // Denotes the default engine as the underlying storage engine type. Resolves
  // during start to the engine type last used. If left unresolved, it's treated
  // the same as EngineTypeRocksDB.
  EngineTypeDefault = 0;
  // Denotes RocksDB as the underlying storage engine type.
  EngineTypeRocksDB = 1;
  // Denotes Pebble as the underlying storage engine type.
  EngineTypePebble = 2;
  // Denotes TeePebbleRocksDB as the underlying storage engine type. Only use
  // for testing purposes.
  EngineTypeTeePebbleRocksDB = 3;
}
